styles.css
* {
  font-family: Arial, Helvetica, sans-serif;
}

body {
  margin: 0px;
  flex-direction: column;
}

.header-hero {
  display: flex;
  flex-direction: column;
  background-color: #1f2937;
  padding: 20px 350px;
  padding-bottom: 200px;
}
/* header */
.header {
  display: flex;
  justify-content: space-between;
  margin-bottom: 80px;
  gap: 10px;
}
.header-logo {
  flex: 1 1 auto;
  font-size: 24px;
  color: #f9faf8;
  font-weight: 700;
}
.header-nav ul {
  flex: 1 1 0;
  display: flex;
  list-style: none;
  font-size: 18px;
  margin: 0;
  padding: 0;
  gap: 20px;
}
.header-nav a {
  margin: 0;
  padding: 0;
  color: #e5e7eb;
  text-decoration: none;
}
/* hero */
.hero {
  display: flex;
  justify-content: space-between;
  gap: 10px;
}
.hero-content {
  flex: 0 1 auto;
  width: 500px;
  height: 200px;
  display: flex;
  flex-direction: column;
}
.hero-main {
  font-size: 48px;
  font-weight: 700;
  color: #f9faf8;
  flex: 1 1 auto;
}
.hero-secondary {
  font-size: 18px;
  color: #e5e7eb;
  padding: 10px 0px;
  flex: 1 1 auto;
}
.hero-image {
  min-width: 250px;
  min-height: 100px;
  color: #e5e7eb;
  display: flex;
  flex: 0 1 auto;
  width: 500px;
  height: 200px;
  background-color: rgb(72, 74, 84);
  justify-content: center;
  align-items: center;
}
.hero button {
  color: #f9faf8;
  flex: 0 6 auto;
  background-color: #3882f6;
  border-radius: 5px;
  width: 125px;
  padding: 5px;
  border-color: #3882f6;
  font-size: 18px;
  font-weight: bold;
  flex: 0 1 auto;
}
/* info section */
.info-sect {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 40px;
  padding-bottom: 80px;
}
.info-header {
  flex: 0 1 auto;
  font-size: 36px;
  font-weight: 700;
  color: #1f2937;
}
.info-box {
  display: flex;
  align-items: center;
  gap: 30px;
  padding: 40px;
}
.box {
  width: 175px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 10px;
}
.box-img {
  width: 150px;
  height: 150px;
  border: 4px solid #3882f6;
  border-radius: 15px;
}
.box-txt {
  text-align: center;
  font-size: 18px;
  color: #505050;
}
/* quote section */
.quote-sect {
  padding: 120px;
  background-color: #e5e7eb;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.q-wrapper {
  width: 825px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.quote {
  align-self: flex-end;
  font-size: 36px;
  font-style: italic;
  color: #1f2937;
}
.writer {
  font-size: 24px;
  color: #1f2937;
  font-weight: bold;
  align-self: flex-end;
}
/* call to action */
.call-act {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 100px;
}
.call-act-wrap {
  width: 800px;
  display: flex;
  background-color: #3882f6;
  padding: 40px 150px;
  border-radius: 10px;
  justify-content: space-between;
}
.act-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 0 1 auto;
}
.act-main {
  font-size: 24px;
  color: #f9faf8;
  font-weight: bold;
}
.act-sub {
  font-size: 18px;
  color: #e5e7eb;
}

.act-button {
  align-self: flex-end;
  color: #f9faf8;
  background-color: #3882f6;
  border-radius: 5px;
  width: 125px;
  height: 35px;
  padding: 5px;
  border-color: #f9faf8;
  font-size: 18px;
  font-weight: bold;
  flex: 0 1 auto;
}
/* footer */

